Tue Apr 29 11:21:40 2003  Chad Elliott  <elliott_c@ociweb.com>

        * ACEXML/common/AttributesImpl.cpp:
        * ACEXML/common/FileCharStream.cpp:
        * ACEXML/common/HttpCharStream.cpp:
        * ACEXML/common/Mem_Map_Stream.cpp:
        * ACEXML/common/NamespaceSupport.cpp:
        * ACEXML/common/StrCharStream.cpp:
        * ACEXML/common/Transcode.i:
        * ACEXML/common/Transcode.cpp:
        * ACEXML/parser/parser/Parser.cpp:
        * ace/Containers_T.cpp:
        * ace/FIFO_Send_Msg.cpp:
        * ace/Functor.i:
        * ace/Time_Value.inl:

          Remove build warnings on Windows XP 64-bit.

        * ace/config-win32-common.h:

          Added a definition for ACE_SIZEOF_VOID_P in the ACE_WIN64 section
          stating that the size of a pointer is 8 bytes.

Tue Apr 29 11:02:27 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/NMakeWorkspaceCreator.pm:

          Change the workspace name from 'Makefile' to the the workspace
          name plus .mak.

Tue Apr 29 09:24:07 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          Use the project name as the default library name instead of the
          directory name.

Tue Apr 29 08:47:16 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          If a project is not specified to be either a library or exe and it
          can't be determined that the type is exe, we default to a library.

Tue Apr 29 06:25:37 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/README:

          Remove the windows only part about dllflags and libflags.

Tue Apr 29 05:49:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Makefile.bor:
          Fixed typo.

Mon Apr 28 21:20:48 2003  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * ace/POSIX_Proactor.cpp (handle_events_i): There was an incorrect